--- a/style.css
+++ b/style.css
@@ -1,22 +1,64 @@
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url(fonts/SourceSansPro-Regular.ttf);
+    font-style: normal;
+    font-weight: 400;
+}
+
+body {
+    padding-left:25vh;
+    padding-right:25vh;
+}
 div.container {
     display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100px;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
 }
-div.card.mb-3 {
-    margin: 0 auto;
-  width: 1500px;
-
-
+div.card {
+    border: 0px solid;
+    border-radius: 0,0,5,5;
 }
 
 div.col {
-    margin: 0 auto;
-    height: 500px;
-    width:750px ;
+    padding-top:10px;
+    padding-bottom: 20px;
+    border-radius: 0,0,5,5;
+    border: 0px solid;
+    background-color: black;
 }
 
-p.card-text {
-    font-family: Source Sans Pro ;
+img.card-img-top, img.card-img-bot {
+        height: 500px;;
+        max-width: 100%;
+}
+img.card-img-bot {
+    max-width: 100%;
+    height: 300px;;
+    padding-top: 10px;
+}
+p.card {
+    font-family: Source Sans Pro;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 21px;
+}
+small {
+    font-family: Source Sans Pro;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 21px;
+    color: #A3A3A3;
+}
+h5 {
+    font-family: Source Sans Pro;
+    font-weight: 400;
+    color:black;
+    font-size: 28px;
+    line-height: 21px;
+}
+a {
+    color: #EC0029;
+    line-height: 21px;
+    font-weight: bold;
 }
