--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 }
 
 body {
-    padding-left:25vh;
-    padding-right:25vh;
+    padding-left:15%;
+    padding-right:15%;
 }
 div.container {
     display: flex;
@@ -29,12 +29,12 @@ div.col {
 }
 
 img.card-img-top, img.card-img-bot {
-        height: 500px;;
+        height: auto;
         max-width: 100%;
 }
 img.card-img-bot {
     max-width: 100%;
-    height: 300px;;
+    height: auto;
     padding-top: 10px;
 }
 p.card {
